--- a/src/app/components/txs/txs.component.html
+++ b/src/app/components/txs/txs.component.html
@@ -21,7 +21,14 @@
         <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-pound"></i>Hash</th>
         <td mat-cell *matCellDef="let tx" mdbWavesEffect> 
           <span matTooltip="tx.hash" matTooltipPosition="above">
-            {{tx.hash | slice:0:15 }}... <i class="ion-ios-copy copy-button" style="cursor: pointer;" ngxClipboard [cbContent]="tx.hash" (click)="showSuccess()"></i>
+            {{tx.hash | slice:0:15 }}... 
+            <i 
+              class="ion-ios-copy copy-button" 
+              style="cursor: pointer;" 
+              ngxClipboard 
+              [cbContent]="tx.hash" 
+              (click)="onCopySucceess()">
+            </i>
           </span>
           </td>
       </ng-container>
@@ -84,10 +91,10 @@
             <div class="row">
               <ul class="list-group">
                 <span *ngFor="let action of tx.action; index as i">
-                    <li class="list-group-item d-flex justify-content-between align-items-center">
-                        Type:
-                        <span class="badge badge-primary badge-pill">{{ action | titlecase}}</span>
-                      </li>
+                  <li class="list-group-item d-flex justify-content-between align-items-center">
+                      Type:
+                      <span class="badge badge-primary badge-pill">{{ action | titlecase}}</span>
+                    </li>
                   <li *ngIf="tx.sender && tx.sender[i]" class="list-group-item d-flex justify-content-between align-items-center">
                     From:
                     <span class="badge badge-primary badge-pill">
@@ -152,7 +159,6 @@
                       <span class="badge badge-primary badge-pill">{{tx.proposal_id[i]}}</span>
                     </li>
                   </span>
-                  
                   <br>
                 </span>
                 <!-- TODO add -->
@@ -173,6 +179,14 @@
                   Memo:
                   <span class="badge badge-primary badge-pill">wtf is up G!</span>
                 </li> -->
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                  <span 
+                      style="cursor: pointer;" 
+                      (click)="openTxDialog(tx)" 
+                      class="badge badge-primary badge-pill">
+                    Details
+                  </span>
+                </li>
               </ul>
             </div>
           </div>
