--- a/src/app/components/validator/validator.component.html
+++ b/src/app/components/validator/validator.component.html
@@ -52,15 +52,15 @@
             <div class=" card my-5">
                 <div class="card-body">
                     <div class="row">
-                        <div class="col-4">
+                        <div class="col-sm-4 col-12">
                             <small class="grey-text">Rank</small>
                             <h4>{{ validator.rank }}</h4>
                         </div>
-                        <div class="col-4">
+                        <div class="col-sm-4 col-12">
                             <small class="grey-text">Voting Power</small>
                             <h4>{{ validator.tokens/1e6 | number:'.0-0' }}</h4>
                         </div>
-                        <div class="col-4">
+                        <div class="col-sm-4 col-12">
                             <small class="grey-text">Delegators</small>
                             <h4>
                               <span *ngIf="validator.delegations; else elseBlock">
@@ -73,7 +73,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-4">
+                        <div class="col-sm-4 col-12">
                             <small class="grey-text">Balance</small>
                             <h4>
                               <span 
@@ -87,13 +87,13 @@
                               </ng-template>
                             </h4>
                         </div>
-                        <div class="col-4">
+                        <div class="col-sm-4 col-12">
                           <small class="grey-text">Rewards</small>
                           <h4 *ngIf="validator.outstanding_rewards">
                             {{validator.outstanding_rewards[0].amount/1e6 | number:'.2-2'}}
                           </h4>
                         </div>
-                        <div class="col-4">
+                        <div class="col-sm-4 col-12">
                           <small class="grey-text">Outstanding Rewards</small>
                           <h4 *ngIf="validator.rewards">
                             {{validator.rewards[0].amount/1e6 | number:'.2-2'}} 
@@ -102,15 +102,15 @@
                     </div>
 
                     <div class="row">
-                        <div class="col-4">
+                        <div class="col-sm-4 col-12">
                             <small class="grey-text">Commission</small>
                             <h4> {{ validator.commission?.rate | percent }} </h4>
                         </div>
-                        <div class="col-4">
+                        <div class="col-sm-4 col-12">
                             <small class="grey-text">Commission Max</small>
                             <h4>{{ validator.commission?.max_rate | percent }}</h4>
                         </div>
-                        <div class="col-4">
+                        <div class="col-sm-4 col-12">
                             <small class="grey-text">Commission Max Change</small>
                             <h4>{{ validator.commission?.max_change_rate | percent }}</h4>
                         </div>
