--- a/src/app/components/txs/txs.component.html
+++ b/src/app/components/txs/txs.component.html
@@ -75,7 +75,7 @@
 
       <ng-container matColumnDef="timestamp">
         <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-clock"></i>Time</th>
-        <td mat-cell *matCellDef="let tx"> {{tx.details?.timestamp | timeAgo}} </td>
+        <td mat-cell *matCellDef="let tx"> {{tx.details?.timestamp | ago | async}} </td>
       </ng-container>
 
       <ng-container matColumnDef="expandedDetail">
