--- a/src/app/components/charts/chart-cards-gov/chart-cards-gov.component.html
+++ b/src/app/components/charts/chart-cards-gov/chart-cards-gov.component.html
@@ -1,6 +1,6 @@
-<section class="mb-5">
+<!-- <section class="mb-5"> -->
   <div class="row">
-    <div *ngFor="let proposal of proposals; let i = index" class="col-lg-4 col-md-12 my-5">   
+    <div *ngFor="let proposal of proposals; let i = index" class="col-lg-4 col-md-12 mb-5">   
       <!--Card-->
       <div class="card card-cascade narrower">    
         <!--Card image-->
@@ -33,4 +33,4 @@
       <!--/.Card-->   
     </div>
   </div>
-</section>
+<!-- </section> -->
