--- a/src/app/components/charts/chart-cards/chart-cards.component.scss
+++ b/src/app/components/charts/chart-cards/chart-cards.component.scss
@@ -1,3 +1,7 @@
+section {
+    margin: 0 auto;
+}
+
 .card.card-cascade .view.gradient-card-header {
     padding: 1rem 1rem;
     text-align: center;
