--- a/src/app/components/navigation/sidenav/sidenav.component.html
+++ b/src/app/components/navigation/sidenav/sidenav.component.html
@@ -1,4 +1,4 @@
-<body class="cyan-skin">
+<body class="indigo-skin">
     <!--Double navigation-->
   <header>
       <!-- Sidebar navigation -->
@@ -152,7 +152,7 @@
                 <!-- <mat-chip color = "accent">
                   alpha
                 </mat-chip> -->
-                <mdb-badge color="indigo">alpha</mdb-badge>
+                <mdb-badge color="pink">alpha</mdb-badge>
             </mat-chip-list>
           </div>
           
