--- a/src/app/components/status-bar/status-bar.component.scss
+++ b/src/app/components/status-bar/status-bar.component.scss
@@ -34,7 +34,7 @@
 }
 
 .card-header-title {
-    color: white;
+    color: black;
     font-size: 200%;
     text-align: center;
     display: inline-block;   
