--- a/src/app/components/blocks/blocks.component.html
+++ b/src/app/components/blocks/blocks.component.html
@@ -1,64 +1,69 @@
-<div class="row table-responsive text-nowrap scrollbar-primary">
-  <div class="container">
-    <div class="row">
-      <div class="col-8">
-        <mat-form-field>
-          <input #queryInputRef matInput placeholder="Enter tx hash">
-        </mat-form-field>
-      </div>
-      <div class="col-4">
-        <button (click) = "queryTx(queryInputRef.value)" mat-raised-button color="accent">Search</button>    
+<div class="row" *ngIf="(appState | async).validators.serviceLoaded; else elseBlock">
+  <div class="row mat-elevation-z8 table-responsive text-nowrap scrollbar-primary text-nowrap">
+    <div class="container">
+      <div class="row">
+        <div class="col-8">
+          <mat-form-field>
+            <input #queryInputRef matInput placeholder="Enter tx hash">
+          </mat-form-field>
+        </div>
+        <div class="col-4">
+          <button (click) = "queryTx(queryInputRef.value)" mat-raised-button color="accent">Search</button>    
+        </div>
       </div>
     </div>
+    <table mat-table 
+               [dataSource]="blocks" 
+               class="mat-elevation-z8 w-auto">
+          
+          <ng-container matColumnDef="height" sticky>
+            <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-soup-can"></i>&nbsp;Height</th>
+            <td mat-cell *matCellDef="let block">
+              {{block.height}}
+            </td>
+          </ng-container>
+        
+          <ng-container matColumnDef="transactions">
+            <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-clipboard"></i>&nbsp;Transactions</th>
+            <td mat-cell *matCellDef="let block">
+              {{block.txs}}
+            </td>
+          </ng-container>
+      
+          <ng-container matColumnDef="proposer">
+            <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-android-contact"></i>&nbsp;Proposer</th>
+            <td mat-cell *matCellDef="let block">
+              <mat-chip-list><mat-chip color = "primary" selected>
+                <span *ngIf="(appState | async).valsMap.size ? (appState | async).valsMap.has(block.proposer) : false; else elseBlockProposer">
+                    {{ (appState | async).valsMap.get(block.proposer) }}
+                </span>
+              </mat-chip></mat-chip-list>
+              <ng-template #elseBlockProposer>{{block.proposer}}</ng-template>
+            </td>
+          </ng-container>
+      
+          <ng-container matColumnDef="timestamp">
+            <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-clock"></i>&nbsp;Timestamp</th>
+            <td mat-cell *matCellDef="let block">  
+              {{block.time | timeAgo }}
+            </td>
+          </ng-container>
+        
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row @rowsAnimation *matRowDef="let row; columns: displayedColumns;"
+          [appBgHighlight]="'#d1d1d1'" defaultColor="#ffffff"
+          ></tr>
+    </table>
   </div>
-  <table mat-table 
-         [dataSource]="blocks" 
-         class="mat-elevation-z8 w-auto">
-    
-    <ng-container matColumnDef="height" sticky>
-      <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-soup-can"></i>Height</th>
-      <td mat-cell *matCellDef="let block">
-        {{block.height}}
-      </td>
-    </ng-container>
-  
-    <ng-container matColumnDef="transactions">
-      <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-clipboard"></i>Transactions</th>
-      <td mat-cell *matCellDef="let block">
-        {{block.txs}}
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="proposer">
-      <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-android-contact"></i>Proposer</th>
-      <td mat-cell *matCellDef="let block">
-        <mat-chip-list><mat-chip color = "primary" selected>
-          <span *ngIf="(appState | async).valsMap.size ? (appState | async).valsMap.has(block.proposer) : false; else elseBlockProposer">
-              {{ (appState | async).valsMap.get(block.proposer) }}
-          </span>
-        </mat-chip></mat-chip-list>
-        <ng-template #elseBlockProposer>{{block.proposer}}</ng-template>
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="timestamp">
-      <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-clock"></i>Timestamp</th>
-      <td mat-cell *matCellDef="let block">  
-        {{block.time | timeAgo }}
-      </td>
-    </ng-container>
-  
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row @rowsAnimation *matRowDef="let row; columns: displayedColumns;"
-    [appBgHighlight]="'#383D4C'" defaultColor="#111923"
-    ></tr>
-  </table>
-
   <div class="row paginator">
     <mat-paginator [hidePageSize]="true" [pageSizeOptions]="[100]"></mat-paginator>
   </div>
-  
 </div>
+<ng-template #elseBlock>
+  <div style="display: flex; justify-content: center;">
+    <mdb-spinner spinnerColor="blue"></mdb-spinner>
+  </div> 
+</ng-template>
  
 <!--  MASTER BRANCH START
 <div class="row">
