--- a/src/app/components/validator/validator.component.html
+++ b/src/app/components/validator/validator.component.html
@@ -2,9 +2,9 @@
     <div class="row">
         <!-- First column -->
         <div class="col-lg-6 col-md-12">
-            <mdb-card class="testimonial-card">
+          <mdb-card class="testimonial-card">
                 <!--Bacground color-->
-                <div class="card-up indigo lighten-1">
+                <div class="card-up indigo">
                 </div>
           
                 <!--Avatar-->
@@ -18,7 +18,7 @@
                   <!--Name-->
                   <mdb-card-title>
                     <h1>{{ validator.description.moniker }}</h1>
-                    <a href="#" target=" "><i class="ion-social-chrome"></i></a>
+                    <a href="{{ validator.description.website }}" target=" "><i class="ion-social-chrome"></i></a>
                   </mdb-card-title>
                   <hr>
                   <!--Quotation-->
@@ -45,123 +45,125 @@
            
                   </mdb-tabset>
                 </mdb-card-body>
-              </mdb-card>
+          </mdb-card>
         </div>
         <div class="col-lg-6 col-md-12">
-            <!--Panel-->
-            <div class=" card my-5">
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-sm-4 col-12">
-                            <small class="grey-text">Rank</small>
-                            <h4>{{ validator.rank }}</h4>
-                        </div>
-                        <div class="col-sm-4 col-12">
-                            <small class="grey-text">Voting Power</small>
-                            <h4>{{ validator.tokens/1e6 | number:'.0-0' }}</h4>
-                        </div>
-                        <div class="col-sm-4 col-12">
-                            <small class="grey-text">Delegators</small>
-                            <h4>
-                              <span *ngIf="validator.delegations; else elseBlock">
-                                {{ validator.delegations.length | number:'.0-0' }}
-                              </span>
-                              <ng-template #elseBlock>
-                                0
-                              </ng-template>
-                            </h4>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-4 col-12">
-                            <small class="grey-text">Balance</small>
-                            <h4>
-                              <span 
-                                  *ngIf="validator.account?.tokens; else balanceElseBlock" 
-                                  matTooltipPosition="above"
-                              >
-                                {{validator.account?.tokens/1e6 | number:'.2-2'}}
-                              </span>
-                              <ng-template #balanceElseBlock>
-                                0
-                              </ng-template>
-                            </h4>
-                        </div>
-                        <div class="col-sm-4 col-12">
-                          <small class="grey-text">Rewards</small>
-                          <h4 *ngIf="validator.outstanding_rewards">
-                            {{validator.outstanding_rewards[0].amount/1e6 | number:'.2-2'}}
-                          </h4>
-                        </div>
-                        <div class="col-sm-4 col-12">
-                          <small class="grey-text">Outstanding Rewards</small>
-                          <h4 *ngIf="validator.rewards">
-                            {{validator.rewards[0].amount/1e6 | number:'.2-2'}} 
-                          </h4>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-sm-4 col-12">
-                            <small class="grey-text">Commission</small>
-                            <h4> {{ validator.commission?.rate | percent }} </h4>
-                        </div>
-                        <div class="col-sm-4 col-12">
-                            <small class="grey-text">Commission Max</small>
-                            <h4>{{ validator.commission?.max_rate | percent }}</h4>
-                        </div>
-                        <div class="col-sm-4 col-12">
-                            <small class="grey-text">Commission Max Change</small>
-                            <h4>{{ validator.commission?.max_change_rate | percent }}</h4>
-                        </div>
-                    </div>
-                    <a class="btn grey btn-rounded waves-effect waves-light text-white" mdbWavesEffect>Details</a>
+          <!-- /.Panel -->
+          <div class="my-5">
+            <mat-card alignment="left" class="mat-elevation-z8">
+              <mat-card-title>Delegations</mat-card-title>
+              <div class="card-body">
+                <div class="row table-responsive text-nowrap scrollbar-primary">
+                  <table mat-table [dataSource]="delegationsDataSource" class="table large-header">
+                    <ng-container matColumnDef="address">
+                      <th mat-header-cell *matHeaderCellDef> Address </th>
+                      <td mat-cell *matCellDef="let delegation"> 
+                        <span *ngIf="(appState | async).valsMap.size ? (appState | async).valsMap.has( delegation.delegator_address ) : false; else elseVetoVoter">
+                          {{ (appState | async).valsMap.get( delegation.delegator_address )}}
+                        </span>
+                        <ng-template #elseVetoVoter>
+                          {{ delegation.delegator_address }}
+                        </ng-template> 
+                      </td>
+                    </ng-container>
+                
+                    <ng-container matColumnDef="amount">
+                      <th mat-header-cell *matHeaderCellDef> Amount </th>
+                      <td mat-cell *matCellDef="let delegation"> 
+                        {{ delegation.shares/1e6 | number:'.2-2' }}
+                      </td>
+                    </ng-container>
+                
+                    <tr mat-header-row *matHeaderRowDef="delegationsDisplayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: delegationsDisplayedColumns;"></tr>
+                  </table> 
+                  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
                 </div>
-            </div>
-            <!--/.Panel-->
+              </div>
+            </mat-card>
+          </div>
+          <!-- /.Panel -->
         </div>
         <!-- /.First column -->
         
         <!-- Second column -->
-        <div class="col-lg-12">
-            <div class="my-5">
-              <mat-card alignment="left">
-                <mat-card-title>Delegations</mat-card-title>
-                <div class="card-body">
-                  <div class="row table-responsive text-nowrap scrollbar-primary">
-                    <table mat-table [dataSource]="delegationsDataSource" class="table large-header">
-                      <ng-container matColumnDef="address">
-                        <th mat-header-cell *matHeaderCellDef> Address </th>
-                        <td mat-cell *matCellDef="let delegation"> 
-                          <span *ngIf="(appState | async).valsMap.size ? (appState | async).valsMap.has( delegation.delegator_address ) : false; else elseVetoVoter">
-                            {{ (appState | async).valsMap.get( delegation.delegator_address )}}
-                          </span>
-                          <ng-template #elseVetoVoter>
-                            {{ delegation.delegator_address }}
-                          </ng-template> 
-                        </td>
-                      </ng-container>
-                  
-                      <ng-container matColumnDef="amount">
-                        <th mat-header-cell *matHeaderCellDef> Amount </th>
-                        <td mat-cell *matCellDef="let delegation"> 
-                          {{ delegation.shares/1e6 | number:'.2-2' }}
-                        </td>
-                      </ng-container>
-                  
-                      <tr mat-header-row *matHeaderRowDef="delegationsDisplayedColumns"></tr>
-                      <tr mat-row *matRowDef="let row; columns: delegationsDisplayedColumns;"></tr>
-                    </table> 
-                    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+        <div class="col-lg-6 col-md-12">
+          <!--Panel-->
+          <div class="card my-5">
+              <div class="card-body">
+                  <div class="row">
+                      <div class="col-sm-4 col-12">
+                          <small class="grey-text">Rank</small>
+                          <h4>{{ validator.rank }}</h4>
+                      </div>
+                      <div class="col-sm-4 col-12">
+                          <small class="grey-text">Voting Power</small>
+                          <h4>{{ validator.tokens/1e6 | number:'.0-0' }}</h4>
+                      </div>
+                      <div class="col-sm-4 col-12">
+                          <small class="grey-text">Delegators</small>
+                          <h4>
+                            <span *ngIf="validator.delegations; else elseBlock">
+                              {{ validator.delegations.length | number:'.0-0' }}
+                            </span>
+                            <ng-template #elseBlock>
+                              0
+                            </ng-template>
+                          </h4>
+                      </div>
                   </div>
-                </div>
-              </mat-card>
-            </div>
-            <!-- /.Panel -->
-            
-            <!-- Panel -->
-            <div class="card my-5">
-              <mat-card alignment="left">
+                  <div class="row">
+                      <div class="col-sm-4 col-12">
+                          <small class="grey-text">Balance</small>
+                          <h4>
+                            <span 
+                                *ngIf="validator.account?.tokens; else balanceElseBlock" 
+                                matTooltipPosition="above"
+                            >
+                              {{validator.account?.tokens/1e6 | number:'.2-2'}}
+                            </span>
+                            <ng-template #balanceElseBlock>
+                              0
+                            </ng-template>
+                          </h4>
+                      </div>
+                      <div class="col-sm-4 col-12">
+                        <small class="grey-text">Rewards</small>
+                        <h4 *ngIf="validator.outstanding_rewards">
+                          {{validator.outstanding_rewards[0].amount/1e6 | number:'.2-2'}}
+                        </h4>
+                      </div>
+                      <div class="col-sm-4 col-12">
+                        <small class="grey-text">Outstanding Rewards</small>
+                        <h4 *ngIf="validator.rewards">
+                          {{validator.rewards[0].amount/1e6 | number:'.2-2'}} 
+                        </h4>
+                      </div>
+                  </div>
+
+                  <div class="row">
+                      <div class="col-sm-4 col-12">
+                          <small class="grey-text">Commission</small>
+                          <h4> {{ validator.commission?.rate | percent }} </h4>
+                      </div>
+                      <div class="col-sm-4 col-12">
+                          <small class="grey-text">Commission Max</small>
+                          <h4>{{ validator.commission?.max_rate | percent }}</h4>
+                      </div>
+                      <div class="col-sm-4 col-12">
+                          <small class="grey-text">Commission Max Change</small>
+                          <h4>{{ validator.commission?.max_change_rate | percent }}</h4>
+                      </div>
+                  </div>
+                  <a class="btn grey btn-rounded waves-effect waves-light text-white" mdbWavesEffect>Details</a>
+              </div>
+          </div>
+          <!--/.Panel-->
+        </div>
+        <div class="col-lg-6 col-md-12">
+          <!-- Panel -->
+          <div class="my-5">
+              <mat-card alignment="left" class="mat-elevation-z8">
                   <mat-card-title>Account: {{ validator.account.value.address }}</mat-card-title>
                   <mat-card-subtitle>Transactions (last 100)</mat-card-subtitle>
                     <div class="card-body">
@@ -220,7 +222,7 @@
                     <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
                   </div>
                 </mat-card>
-            </div>
+          </div>
         </div>   
   </div>
 </section>
