--- a/src/app/components/validators/validators.component.html
+++ b/src/app/components/validators/validators.component.html
@@ -11,7 +11,7 @@
     : 0
   }}%</mdb-progress>
 </div> -->
-<div class="row" *ngIf="(appState | async).validators.serviceLoaded; else elseBlock">
+<div class="row main-row" *ngIf="(appState | async).validators.serviceLoaded; else elseBlock">
   <!-- @aakatev	
     https://github.com/cosmos/cosmos-sdk/blob/9a16e2675f392b083dd1074ff92ff1f9fbda750d/types/staking.go
     Unbonded  BondStatus = 0x00
@@ -55,7 +55,7 @@
       </ng-container>
   
       <ng-container  matColumnDef="moniker" sticky>
-        <th mat-sort-header="description.moniker" mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-at"></i>Name</th>
+        <th mat-sort-header="description.moniker" mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-at"></i>&nbsp;Name</th>
         <td mat-cell *matCellDef="let validator" id="{{validator.hex_address}}"> 
           <span>
             <!-- <figure style="cursor: pointer;" (click)="openDialog(validator)" class="validator-avatar is-128x128" *ngIf="validator.keybase">
@@ -80,7 +80,7 @@
       </ng-container>
     
       <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-load-a"></i>Status</th>
+        <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-load-a"></i>&nbsp;Status</th>
         <td mat-cell *matCellDef="let validator">  
           <span *ngIf="validator.jailed"><i class="ion-record jailed"></i></span>
           <span *ngIf="!validator.jailed"><i class="ion-record jailedNot"></i></span>
@@ -105,7 +105,7 @@
       </ng-container>
     
       <ng-container matColumnDef="weight">
-        <th mat-sort-header="tokens" mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-flash"></i>Voting Weight</th>
+        <th mat-sort-header="tokens" mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-flash"></i>&nbsp;Voting Weight</th>
         <td mat-cell *matCellDef="let validator">
           {{validator.tokens/1e6 | number:'.0-0'}}&nbsp;<span class="table-subtitle">({{validator.tokens/(appState | async).totalStake| percent:'.2-2'}})</span>
           <!-- <br>
@@ -116,7 +116,7 @@
       
   
       <ng-container matColumnDef="assets">
-        <th mat-sort-header="account.tokens" mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-social-usd"></i>Assets</th>
+        <th mat-sort-header="account.tokens" mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-social-usd"></i>&nbsp;Assets</th>
         <td mat-cell *matCellDef="let validator">
           <span *ngIf="validator.account?.tokens; else accountElseBlock" matTooltip="Balance" matTooltipPosition="above">
             {{validator.account?.tokens/1e6 | number:'.2-2'}}
@@ -136,7 +136,7 @@
       </ng-container>
   
       <ng-container matColumnDef="delegators">
-        <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-person-stalker"></i>Delegators</th>
+        <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-person-stalker"></i>&nbsp;Delegators</th>
         <td mat-cell *matCellDef="let validator"> 
           <span *ngIf="validator.delegations; else otherBlock">
             {{validator.delegations?.length}}
@@ -169,7 +169,7 @@
       </ng-container>
      -->
       <ng-container matColumnDef="bond">
-        <th mat-sort-header="self_bond" mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-log-in"></i>Self-Bond</th>
+        <th mat-sort-header="self_bond" mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-log-in"></i>&nbsp;Self-Bond</th>
         <td mat-cell *matCellDef="let validator">
           {{validator.self_bond/1e6 | number:'.0-0'}} <span class="ticker">ATOM</span>
           <!-- <br> -->
@@ -178,7 +178,7 @@
       </ng-container>
           
       <ng-container matColumnDef="commission">
-        <th mat-header-cell *matHeaderCellDef><i class="ion-cash"></i>Commission</th>
+        <th mat-header-cell *matHeaderCellDef><i class="ion-cash"></i>&nbsp;Commission</th>
         <td mat-cell *matCellDef="let validator">
           <span matTooltip="Current Rate" matTooltipPosition="above">{{validator.commission?.rate | percent}}</span>
           <span class="table-subtitle">&nbsp;({{validator.commission?.max_rate | percent}} - {{validator.commission?.max_change_rate | percent}})</span>
@@ -202,14 +202,12 @@
               <ul class="list-group list-group-horizontal-lg">
                 <li  
                   class="list-group-item d-flex justify-content-between align-items-center" 
-                  [appBgHighlight]="'#383D4C'" 
-                  defaultColor="#111923" 
                   style="cursor: pointer;"
                 >
                   First seen
                   <span class="badge badge-primary badge-pill">{{validator.slashing?.start_height}}</span>
                 </li>
-                <li class="list-group-item d-flex justify-content-between align-items-center" [appBgHighlight]="'#383D4C'" defaultColor="#111923" style="cursor: pointer;" (click)="openPowerEventsDialog(validator)">
+                <li class="list-group-item d-flex justify-content-between align-items-center" style="cursor: pointer;" (click)="openPowerEventsDialog(validator)">
                   Precommits
                   <span class="badge badge-primary badge-pill" *ngIf="validator.slashing">
                     <span *ngIf="!validator.jailed; else elseCommitsBlock">
@@ -234,11 +232,11 @@
                     </ng-template>
                   </span>
                 </li>
-                <li class="list-group-item d-flex justify-content-between align-items-center" [appBgHighlight]="'#383D4C'" defaultColor="#111923" style="cursor: pointer;"> 
+                <li class="list-group-item d-flex justify-content-between align-items-center" style="cursor: pointer;"> 
                   Missed Blocks
                   <span class="badge badge-primary badge-pill">{{validator.slashing?.missed_blocks_counter}}</span>
                 </li>
-                <li class="list-group-item d-flex justify-content-between align-items-center" [appBgHighlight]="'#383D4C'" defaultColor="#111923" style="cursor: pointer;" (click)="openProposedBlocksDialog(validator)">
+                <li class="list-group-item d-flex justify-content-between align-items-center" style="cursor: pointer;" (click)="openProposedBlocksDialog(validator)">
                   Self-bond%
                   <span class="badge badge-primary badge-pill">{{ validator.self_bond / validator.tokens | percent:'.2-2' }}</span>
                 </li>
@@ -246,22 +244,20 @@
                   Outstanding Rewards
                   <span class="badge badge-primary badge-pill" *ngIf="validator.rewards">{{validator.rewards[0].amount/1e6 | number:'.2-2'}} <span class="badge-ticker">ATOM</span></span>
                 </li> -->
-                <li class="list-group-item d-flex justify-content-between align-items-center" [appBgHighlight]="'#383D4C'" defaultColor="#111923" style="cursor: pointer;" (click)="openRewardsDialog(validator)">
+                <li class="list-group-item d-flex justify-content-between align-items-center" style="cursor: pointer;" (click)="openRewardsDialog(validator)">
                   Rewards
                   <span class="badge badge-primary badge-pill" *ngIf="validator.outstanding_rewards">
                     {{validator.outstanding_rewards[0].amount/1e6 | number:'.2-2'}} 
                     <span class="badge-ticker">ATOM</span>
                   </span>
                 </li>
-                <li class="list-group-item d-flex justify-content-between align-items-center" [appBgHighlight]="'#383D4C'" defaultColor="#111923" style="cursor: pointer;" (click)="openAddressDialog(validator)"> 
+                <li class="list-group-item d-flex justify-content-between align-items-center" style="cursor: pointer;" (click)="openAddressDialog(validator)"> 
                   Address
                   <span class="badge badge-primary badge-pill" *ngIf="validator.rewards"><i class="fa fa-id-badge"></i></span>
                 </li>
                 <li
                     *ngIf="validator.delegations && validator.delegations.length > 0; else detailsLoading"
                     class="list-group-item d-flex justify-content-between align-items-center" 
-                    [appBgHighlight]="'#383D4C'" 
-                    defaultColor="#111923" 
                     style="cursor: pointer;" 
                     (click)="openValidatorDetailDialog(validator)">
                   Details
@@ -270,7 +266,7 @@
                 <ng-template #detailsLoading>
                     <li
                       class="list-group-item d-flex justify-content-between align-items-center" 
-                      defaultColor="#111923">
+                    >
                     Loading...
                     <mdb-spinner spinnerColor="blue"></mdb-spinner>
                   </li>
@@ -283,7 +279,8 @@
   
       <tr mat-header-row *matHeaderRowDef="displayedColumns sticky: true"></tr>
       <tr mat-row *matRowDef="let validator; columns: displayedColumns;"
-          [appBgHighlight]="'#383D4C'" defaultColor="#111923"
+          [appBgHighlight]="'#d1d1d1'" 
+          defaultColor="#ffffff"
           [class.example-expanded-row]="expandedElement === validator"
           (click)="expandedElement = expandedElement === validator ? null : validator">
       </tr>
@@ -294,7 +291,6 @@
   <div class="row paginator">
     <mat-paginator [pageSizeOptions]="[10, 20, 50, 100]" showFirstLastButtons></mat-paginator>
   </div>
-  
 
 </div>
 <ng-template #elseBlock>
